Fix print z-index: send edges behind nodes

--- a/eikekveik/css/style.css
+++ b/eikekveik/css/style.css
@@ -322,6 +322,7 @@
 
     .edges {
         opacity: 1 !important;
+        z-index: -1;
     }
 
     .edges path {
